--- a/index.html
+++ b/index.html
@@ -112,6 +112,24 @@
           conhecimento sobre a área.
         </p>
       </a>
+
+      <a
+        href="https://giosmartyn.github.io/Projeto_Estudo_01/"
+        target="_blank"
+        class="memory"
+      >
+        <small>13 de Julho de 2023</small>
+        <h1>Continuando os estudos</h1>
+        <div>
+          <img
+            src="./assets/projetoestudos1.png"
+            alt="Imagem do site de projeto estudos 1"
+          />
+        </div>
+        <p>
+          Esse projeto foi um desafio. Estava com ele guardado para fazer já havia muito tempo mas não tinha motivação o suficiente para começar, foi um período difícil. Porém, quando comecei, as coisas começaram a dar certo, tive umas ajudinhas aqui e ali e com isso consegui finalizar e o resultado foi incrível. Era um projeto simples, mas ter conseguido fazer a maior parte sozinha me deixou extremamente animada.
+        </p>
+      </a>
     </nav>
   </body>
 </html>
