add a new project

--- a/index.html
+++ b/index.html
@@ -130,6 +130,25 @@
           Esse projeto foi um desafio. Estava com ele guardado para fazer já havia muito tempo mas não tinha motivação o suficiente para começar, foi um período difícil. Porém, quando comecei, as coisas começaram a dar certo, tive umas ajudinhas aqui e ali e com isso consegui finalizar e o resultado foi incrível. Era um projeto simples, mas ter conseguido fazer a maior parte sozinha me deixou extremamente animada.
         </p>
       </a>
+
+      <a
+        href="https://giosmartyn.github.io/Projeto_Estudo_02/"
+        target="_blank"
+        class="memory"
+      >
+        <small>13 de Julho de 2023</small>
+        <h1>Uma surpresa</h1>
+        <div>
+          <img
+            src="./assets/projetoestudos2.png"
+            alt="Imagem do site de projeto estudos 1"
+          />
+        </div>
+        <p>
+          Terminar esse projeto foi uma surpresa. Em menos de um dia tentando, consegui finalizar completamente sozinha. Foi uma experiência diferente mas muito boa, nunca imaginei conseguir terminar um projeto sozinha e em um dia.
+        </p>
+      </a>
+
     </nav>
   </body>
 </html>
